tests/NormalTests/paczka1/fuzzy1/17242704.err
Error in line 9: ZuX S143 71,9
Error in line 11: ZuX S492 13,0
Error in line 25: zA6xW29Sw S143 83,0
Error in line 27: FZorl A618 7,1
Error in line 38: S492 A343 84,2
